--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -44,9 +44,18 @@ jobs:
         env:
           NODE_ENV: production
 
+      - name: Debug - Check build output
+        run: |
+          echo "Build completed. Checking dist directory:"
+          ls -la dist/
+          echo "Current working directory:"
+          pwd
+
       - name: Deploy to Azure Static Web Apps
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
+        env:
+          AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -55,6 +64,8 @@ jobs:
           api_location: ""
           output_location: "dist"
           skip_app_build: true
+          skip_deploy_on_missing_secrets: false
+          deployment_environment: 'Production'
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
