--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "less": "latest",
     "lightningcss": "latest",
     "lucide-react": "^0.454.0",
-
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
@@ -82,7 +81,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-imagetools": "^8.0.0"
   }
 }
