Possible contact form email fix

--- a/web.config
+++ b/web.config
@@ -9,6 +9,13 @@
       <mimeMap fileExtension=".mjs" mimeType="text/javascript" />
       <mimeMap fileExtension=".tsx" mimeType="text/javascript" />
     </staticContent>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type, x-functions-key" />
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
     <rewrite>
       <rules>
         <rule name="React Routes" stopProcessing="true">
