--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
